Fix: progress bar styles on Firefox

--- a/src/Quiz/react-quiz.css
+++ b/src/Quiz/react-quiz.css
@@ -117,19 +117,24 @@
 
 .quiz-main-progress {
 	flex: 1;
-	background-color: transparent;
+	background-color: rgba(255, 255, 255, 0.4);
 	border-radius: 100px;
 	overflow: hidden;
+	border: none;
 }
 
 .quiz-main-progress::-webkit-progress-bar {
-	background-color: rgba(255, 255, 255, 0.4);
+	background-color: transparent;
+}
+.quiz-main-progress::-moz-progress-bar {
+	background-color: rgba(255, 255, 255, 0.8);
+	border-radius: 100px;
 }
 
 .quiz-main-progress::-webkit-progress-value {
-	transition: all 1s ease;
 	background-color: rgba(255, 255, 255, 0.8);
 	border-radius: 100px;
+	transition: all 1s ease;
 }
 
 .quiz-question-body {
